--- a/src/components/Header/HeaderComponent.module.css
+++ b/src/components/Header/HeaderComponent.module.css
@@ -1,25 +1,13 @@
-
-
-
 .header {
-  color: #fff;
-  padding: 16px;
-  text-align: left;
-  display: flex;
   width: 100%;
-  justify-content: flex-end;
-  
-
-}
-.list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: flex;
-  
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
 }
-.listItem {
-  padding: 10px 20px;
-  margin: 10px;
-  cursor: pointer;
+.img {
+  width: 25px;
+  height: 25px;
+  padding: 0.5rem;
 }
