--- a/src/components/Header/HeaderComponent.module.css
+++ b/src/components/Header/HeaderComponent.module.css
@@ -1,25 +1,28 @@
-
-
-
 .header {
-  color: #fff;
-  padding: 16px;
-  text-align: left;
-  display: flex;
   width: 100%;
-  justify-content: flex-end;
-  
-
-}
-.list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: flex;
-  
+  flex-wrap: wrap;          
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
 }
-.listItem {
-  padding: 10px 20px;
-  margin: 10px;
-  cursor: pointer;
+.LogoContainer {
+  display: flex;  
+  gap: 10px;
+  align-items: center;
+}
+
+.TitleAll {
+  flex: 1 1 200px;           
+  display: flex;
+  justify-content: left;   
+  align-items: center;
+  gap: 1rem;
+  min-width: 0;
+}
+
+.logo {
+  width: 30px;               
+  height: 30px;
+  padding: 5px;
 }
