--- a/src/components/Body/BodyComponent.module.css
+++ b/src/components/Body/BodyComponent.module.css
@@ -22,5 +22,26 @@
     margin: 40px auto; 
 }
 
+.spinnerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0;
+}
 
-    
+.spinner {
+  border: 4px solid #eee;
+  border-top: 4px solid #0078d4;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin-bottom: 1rem;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
