Refaktoring stylů a aktualizace assetů
Upraven soubor App.css pro centrování kořenového prvku pomocí automatických okrajů.

Přidáno odsazení v App.tsx pro lepší rozvržení.

Odstraněny nepoužívané SVG soubory: email-8-svgrepo-com.svg, icons8-discord-30.svg, icons8-github-24.svg, react.svg.

Přidány nové SVG assety: discord.svg, email.svg, github.svg, moon-stars.svg, sun.svg.

Vylepšen BodyComponent.module.css o nové pozadí a ohraničení.

 Upravena maximální šířka v RepoComponent.module.css pro lepší responzivitu.

 Upraven HeaderComponent.module.css pro zarovnání a úpravu velikosti loga.

Aktualizován HeaderComponent.tsx – přidána funkce přepínání motivů s novými ikonami.

Do index.css přidány CSS proměnné pro témata a aplikován styl pro tmavý režim.

--- a/src/components/Body/BodyComponent.module.css
+++ b/src/components/Body/BodyComponent.module.css
@@ -20,7 +20,17 @@
     box-shadow: #616161  5px 5px 10px;
     max-width: 600px;
     margin: 40px auto; 
+  background: var(--container-bg);
+  border: 3px solid var(--border);
+  box-shadow: 5px 5px 10px var(--shadow);
 }
+.title {
+  color: var(--primary);
+}
+.text {
+  color: var(--text-secondary);
+}
+
 
 .spinnerContainer {
   display: flex;
