--- a/src/components/Body/RepoComponent.module.css
+++ b/src/components/Body/RepoComponent.module.css
@@ -2,10 +2,10 @@
   border: 1.5px solid #000000;
   border-radius: 5px;
   padding: 12px;
-  margin:   10px auto;
+  margin: 10px auto;
   display: flex;
   flex-direction: column;
-  max-width: 65%;
+  max-width: 350px; 
   cursor: pointer;
 }
 .header {
