--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,41 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  --background: #ffffff;
+  --container-bg: #fff3cc;
+  --primary: #000000;
+  --text: #000000;
+  --text-secondary: #333333;
+  --border: #000000;
+  
+  
+}
+#root {
+  padding: 10px;
+}
+
+body.dark {
+  --background: #181a20;
+  --container-bg: #23262f;
+  --primary: #ffffff;
+  --text: #ffffff;
+  --text-secondary: #e6e6e6;
+  --border: #33384d;
+  
+}
+
+body {
+  background: var(--background);
+  color: var(--text);
+  margin: 0;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+body.dark img.theme-invert{
+  filter: invert(1) brightness(1.2) contrast(1.1) !important;
+  transition: filter 0.2s;
 }
