--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-
-#root {
-  max-width: 600px;
-  margin: auto;
-  text-align: center;
-}
-
 .profilovka {
   width: 100px;
   height: 100px;
@@ -18,3 +11,8 @@
   align-items: center;  
   gap: 10px;
 } 
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
