--- a/src/components/Body/RepoComponent.module.css
+++ b/src/components/Body/RepoComponent.module.css
@@ -1,6 +1,6 @@
 .container {
-  border: 1.5px solid #000000;
-  border-radius: 5px;
+  border: 1.5px solid var(--border);
+  border-radius: 16px;
   padding: 12px;
   margin: 10px auto;
   display: flex;
@@ -8,11 +8,13 @@
   max-width: 350px; 
   cursor: pointer;
 }
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .title {
   font-size: 18px;
   font-weight: bold;
@@ -24,6 +26,7 @@
   font-size: 14px;
   text-align: left;
 }
+
 .language {
   font-size: 12px;
   text-align: left;
@@ -32,8 +35,9 @@
 
 .footer {
  display: flex;
-  justify-content: space-between;
+ justify-content: space-between;
 }
+
 .date {
   font-size: 12px;
   color: #666666;
