--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,22 @@
   --text-secondary: #333333;
   --border: #000000;
 }
+
 :root.dark {
   --background: #181a20;
   --container-bg: #23262f;
   --primary: #ffffff;
   --text: #ffffff;
   --text-secondary: #e6e6e6;
-  --border: #33384d;
-}
-  
-#root {
-  padding: 10px;
+  --border: #6b6b6b;
 }
 
+#root {
+  max-width: 600px;
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+}
 
 body {
   background: var(--background);
@@ -27,17 +30,9 @@ body {
   line-height: 1.5;
   font-weight: 400;
   width: 100%;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   margin: auto;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 html.dark img.theme-invert {
   filter: invert(1) brightness(1.2) contrast(1.1) !important;
   transition: filter 0.2s;
