--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.profilovka {
+.profile {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   margin: 10px;
 }
 
-.profilovka-container {
+.profile-container {
   display: flex;
   justify-content: center;
   align-items: center;  
